--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -46,10 +46,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBE-5Q-JbI">
-                                                    <rect key="frame" x="8" y="8" width="327" height="133.5"/>
+                                                    <rect key="frame" x="8" y="8" width="327" height="134"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="teslaa" translatesAutoresizingMaskIntoConstraints="NO" id="cRU-tn-lrX">
-                                                            <rect key="frame" x="8" y="16" width="100" height="100"/>
+                                                            <rect key="frame" x="8" y="17" width="100" height="100"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="100" id="bUQ-N8-xUJ"/>
                                                                 <constraint firstAttribute="height" constant="100" id="ecs-ps-G7r"/>
@@ -131,16 +131,146 @@
                     <navigationItem key="navigationItem" title="DreamLister" id="9nP-61-llk">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="HiE-hd-yqd">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <segue destination="ADB-2q-nCL" kind="show" identifier="itemDetailsVCNew" id="Hcz-LN-a65"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="segment" destination="oLW-fU-j6y" id="B5u-g8-ldz"/>
                         <outlet property="tableView" destination="id9-XI-HEg" id="GH2-Ex-PUb"/>
+                        <segue destination="ADB-2q-nCL" kind="show" identifier="itemDetailsVC" id="48P-eQ-TFp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="753" y="691"/>
+            <point key="canvasLocation" x="646" y="684"/>
+        </scene>
+        <!--Add/Edit-->
+        <scene sceneID="GZh-rO-mrI">
+            <objects>
+                <viewController id="ADB-2q-nCL" customClass="ItemDetailsVC" customModule="DreamLister" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rBK-Nd-qrb"/>
+                        <viewControllerLayoutGuide type="bottom" id="jeF-eW-Oa4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iiI-T6-nUD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePick" translatesAutoresizingMaskIntoConstraints="NO" id="B8f-la-UVZ">
+                                <rect key="frame" x="16" y="72" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Tr4-Xh-AGf"/>
+                                    <constraint firstAttribute="height" constant="100" id="dBo-gt-e5F"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Znv-7g-pGg">
+                                <rect key="frame" x="16" y="72" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="W1b-UG-JJ6"/>
+                                    <constraint firstAttribute="width" constant="100" id="tXu-Fi-FEG"/>
+                                </constraints>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NLa-9e-ARm" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
+                                <rect key="frame" x="124" y="82" width="235" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="ngi-Bw-oaY"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZzL-AK-jsm" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
+                                <rect key="frame" x="124" y="132" width="235" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="vzu-nQ-lDw"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Details" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PfJ-gk-pxd" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
+                                <rect key="frame" x="16" y="182" width="343" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="xky-2y-qn1"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZ6-gc-aq3">
+                                <rect key="frame" x="30" y="617" width="314" height="30"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="nFC-HH-S7n"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
+                                <state key="normal" title="Save Item">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="saveButton:" destination="ADB-2q-nCL" eventType="touchUpInside" id="uKZ-B3-GSe"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xCm-Y0-ilo">
+                                <rect key="frame" x="0.0" y="393" width="375" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="8q6-9g-eIZ"/>
+                                </constraints>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l83-Ha-4ZY">
+                                <rect key="frame" x="91" y="324" width="192" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ajp-np-zYI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PfJ-gk-pxd" firstAttribute="top" secondItem="ZzL-AK-jsm" secondAttribute="bottom" constant="10" id="46f-By-gLb"/>
+                            <constraint firstItem="PfJ-gk-pxd" firstAttribute="trailing" secondItem="iiI-T6-nUD" secondAttribute="trailingMargin" id="85l-jI-ERG"/>
+                            <constraint firstItem="NLa-9e-ARm" firstAttribute="trailing" secondItem="iiI-T6-nUD" secondAttribute="trailingMargin" id="BUk-0I-jS7"/>
+                            <constraint firstAttribute="trailing" secondItem="l83-Ha-4ZY" secondAttribute="trailing" constant="92" id="DqV-76-rit"/>
+                            <constraint firstItem="B8f-la-UVZ" firstAttribute="top" secondItem="rBK-Nd-qrb" secondAttribute="bottom" constant="8" id="Lia-o1-v7D"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dZ6-gc-aq3" secondAttribute="trailing" constant="15" id="MIo-hK-ZQ7"/>
+                            <constraint firstItem="xCm-Y0-ilo" firstAttribute="leading" secondItem="iiI-T6-nUD" secondAttribute="leading" id="NJk-Pw-FPb"/>
+                            <constraint firstItem="PfJ-gk-pxd" firstAttribute="leading" secondItem="iiI-T6-nUD" secondAttribute="leadingMargin" id="NSm-xP-6dS"/>
+                            <constraint firstItem="ZzL-AK-jsm" firstAttribute="leading" secondItem="Znv-7g-pGg" secondAttribute="trailing" constant="8" id="Vwx-zv-b7n"/>
+                            <constraint firstAttribute="trailing" secondItem="xCm-Y0-ilo" secondAttribute="trailing" id="bdR-XP-GCZ"/>
+                            <constraint firstItem="l83-Ha-4ZY" firstAttribute="leading" secondItem="iiI-T6-nUD" secondAttribute="leading" constant="91" id="cDM-9L-5XR"/>
+                            <constraint firstItem="dZ6-gc-aq3" firstAttribute="top" secondItem="xCm-Y0-ilo" secondAttribute="bottom" constant="8" id="d2G-9V-z1D"/>
+                            <constraint firstItem="l83-Ha-4ZY" firstAttribute="top" secondItem="PfJ-gk-pxd" secondAttribute="bottom" constant="70" id="g3R-6W-hLP"/>
+                            <constraint firstItem="dZ6-gc-aq3" firstAttribute="leading" secondItem="iiI-T6-nUD" secondAttribute="leadingMargin" constant="14" id="ggD-P0-5Mq"/>
+                            <constraint firstItem="ZzL-AK-jsm" firstAttribute="trailing" secondItem="iiI-T6-nUD" secondAttribute="trailingMargin" id="jBv-vk-qzh"/>
+                            <constraint firstItem="ZzL-AK-jsm" firstAttribute="top" secondItem="NLa-9e-ARm" secondAttribute="bottom" constant="10" id="lhn-bw-aIK"/>
+                            <constraint firstItem="NLa-9e-ARm" firstAttribute="leading" secondItem="Znv-7g-pGg" secondAttribute="trailing" constant="8" id="lzF-wZ-AMQ"/>
+                            <constraint firstItem="Znv-7g-pGg" firstAttribute="leading" secondItem="iiI-T6-nUD" secondAttribute="leadingMargin" id="mfc-xj-s5O"/>
+                            <constraint firstItem="jeF-eW-Oa4" firstAttribute="top" secondItem="dZ6-gc-aq3" secondAttribute="bottom" constant="20" id="rdO-PV-HAO"/>
+                            <constraint firstItem="B8f-la-UVZ" firstAttribute="leading" secondItem="iiI-T6-nUD" secondAttribute="leadingMargin" id="syN-E4-a9P"/>
+                            <constraint firstItem="NLa-9e-ARm" firstAttribute="top" secondItem="rBK-Nd-qrb" secondAttribute="bottom" constant="18" id="xvh-eV-S2T"/>
+                            <constraint firstItem="Znv-7g-pGg" firstAttribute="top" secondItem="rBK-Nd-qrb" secondAttribute="bottom" constant="8" id="yaj-x4-ZIH"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add/Edit" id="bp6-9U-bgL">
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="ukf-An-DIT">
+                            <color key="tintColor" red="0.9333954632" green="0.30656087789999997" blue="0.26557094079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="detailsField" destination="PfJ-gk-pxd" id="LH7-n0-x16"/>
+                        <outlet property="priceField" destination="ZzL-AK-jsm" id="iXL-F3-Lc3"/>
+                        <outlet property="selectStore" destination="l83-Ha-4ZY" id="x46-Ai-c7S"/>
+                        <outlet property="storePicker" destination="xCm-Y0-ilo" id="6IR-Ek-L4y"/>
+                        <outlet property="titleField" destination="NLa-9e-ARm" id="WuD-j2-Imp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tpn-m1-CQW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1493.5999999999999" y="690.40479760119945"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1p5-xG-aVB">
@@ -162,10 +292,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gcJ-ra-MJn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29.600000000000001" y="691.304347826087"/>
+            <point key="canvasLocation" x="-161" y="526"/>
         </scene>
     </scenes>
     <resources>
+        <image name="imagePick" width="300" height="300"/>
         <image name="teslaa" width="800" height="489"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="48P-eQ-TFp"/>
+    </inferredMetricsTieBreakers>
 </document>
