--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bwo-ts-pJN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bwo-ts-pJN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -171,6 +171,9 @@
                                     <constraint firstAttribute="height" constant="100" id="W1b-UG-JJ6"/>
                                     <constraint firstAttribute="width" constant="100" id="tXu-Fi-FEG"/>
                                 </constraints>
+                                <connections>
+                                    <action selector="addImage:" destination="ADB-2q-nCL" eventType="touchUpInside" id="NPD-nr-Aco"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NLa-9e-ARm" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
                                 <rect key="frame" x="124" y="82" width="235" height="40"/>
@@ -268,6 +271,7 @@
                         <outlet property="priceField" destination="ZzL-AK-jsm" id="iXL-F3-Lc3"/>
                         <outlet property="selectStore" destination="l83-Ha-4ZY" id="x46-Ai-c7S"/>
                         <outlet property="storePicker" destination="xCm-Y0-ilo" id="6IR-Ek-L4y"/>
+                        <outlet property="thumbImg" destination="B8f-la-UVZ" id="0Qe-ol-JLo"/>
                         <outlet property="titleField" destination="NLa-9e-ARm" id="WuD-j2-Imp"/>
                     </connections>
                 </viewController>
